--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <a>WebStudio</a>
+      <a href="/">WebStudio</a>
       <nav>
         <ul>
           <li><a href="">Студия</a></li>
@@ -98,7 +98,7 @@
       </section>
     </main>
     <footer>
-      <a>WebStudio</a>
+      <a href="/">WebStudio</a>
       <address>
         <ul>
           <li>
