--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>WebStudio</title>
   </head>
   <body>
     <header>
-      <a>WebStudio</a>
+      <a href="/">WebStudio</a>
       <nav>
         <ul>
           <li><a href="">Студия</a></li>
@@ -16,8 +23,10 @@
           <li><a href="">Контакты</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
     </header>
     <main>
       <section>
@@ -25,6 +34,7 @@
         <button type="button">Заказать услугу</button>
       </section>
       <section>
+        <h2 hidden>Наши преимущества</h2>
         <ul>
           <li>
             <h3>Внимание к деталям</h3>
@@ -51,46 +61,47 @@
       <section>
         <h2>Чем мы занимаемся</h2>
         <ul>
-          <li><img src="./img/box_1.jpg" alt="руки на клавиатуре" width="370" height="294" /></li>
-          <li><img src="./img/box_2.jpg" alt="телефон и ноутбук" width="370" height="294" /></li>
-          <li><img src="./img/box_3.jpg" alt="платшет" width="370" height="294" /></li>
+          <li>
+            <img
+              src="./img/box_1.jpg"
+              alt="разработка программного обеспечения"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="./img/box_2.jpg"
+              alt="тестирование мобильного приложения"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img src="./img/box_3.jpg" alt="работа с палитрой цветов" width="370" height="294" />
+          </li>
         </ul>
       </section>
       <section>
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img
-              src="./img/img_team_1.jpg"
-              alt="мужчина в бордовой рубашке и очках"
-              width="270"
-              height="260"
-            />
+            <img src="./img/img_team_1.jpg" alt="Product Designer" width="270" height="260" />
             <h3>Игорь Демьяненко</h3>
             <p lang="en">Product Designer</p>
           </li>
           <li>
-            <img src="./img/img_team_2.jpg" alt="девушка в очках" width="270" height="260" />
+            <img src="./img/img_team_2.jpg" alt="Frontend Developer" width="270" height="260" />
             <h3>Ольга Репина</h3>
             <p lang="en">Frontend Developer</p>
           </li>
           <li>
-            <img
-              src="./img/img_team_3.jpg"
-              alt="мужчина в голубой рубашке"
-              width="270"
-              height="260"
-            />
+            <img src="./img/img_team_3.jpg" alt="Marketing" width="270" height="260" />
             <h3>Николай Тарасов</h3>
             <p lang="en">Marketing</p>
           </li>
           <li>
-            <img
-              src="./img/img_team_4.jpg"
-              alt="мужчина в черной футболке и очках"
-              width="270"
-              height="260"
-            />
+            <img src="./img/img_team_4.jpg" alt="UI Designer" width="270" height="260" />
             <h3>Михаил Ермаков</h3>
             <p lang="en">UI Designer</p>
           </li>
@@ -98,7 +109,7 @@
       </section>
     </main>
     <footer>
-      <a>WebStudio</a>
+      <a href="/">WebStudio</a>
       <address>
         <ul>
           <li>
