--- a/index.html
+++ b/index.html
@@ -14,54 +14,68 @@
     <title>WebStudio</title>
   </head>
   <body>
-    <header>
-      <a href="/">WebStudio</a>
-      <nav>
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+    <header class="header">
+      <a href="/" class="header-logo">WebStudio</a>
+      <nav class="header-navigation">
+        <ul class="header-navigation-list">
+          <li class="header-navigation-item">
+            <a href="" class="header-navigation-link">Студия</a>
+          </li>
+          <li class="header-navigation-item">
+            <a href="" class="header-navigation-link">Портфолио</a>
+          </li>
+          <li class="header-navigation-item">
+            <a href="" class="header-navigation-link">Контакты</a>
+          </li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="header-list">
+        <li class="header-item">
+          <a href="mailto:info@devstudio.com" class="header-link">info@devstudio.com</a>
+        </li>
+        <li class="header-item">
+          <a href="tel:+380961111111" class="header-link">+38 096 111 11 11</a>
+        </li>
       </ul>
     </header>
     <main>
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+      <section class="hero">
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <button type="button" class="hero-btn">Заказать услугу</button>
       </section>
-      <section>
-        <h2 hidden>Наши преимущества</h2>
-        <ul>
-          <li>
-            <h3>Внимание к деталям</h3>
-            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+      <section class="benefits">
+        <h2 class="visually-hidden">Наши преимущества</h2>
+        <ul class="benefits-list">
+          <li class="benefits-item">
+            <h3 class="benefits-title">Внимание к деталям</h3>
+            <p class="benefits-text">
+              Идейные соображения, а также начало повседневной работы по формированию позиции.
+            </p>
           </li>
-          <li>
-            <h3>Пунктуальность</h3>
-            <p>
+          <li class="benefits-item">
+            <h3 class="benefits-title">Пунктуальность</h3>
+            <p class="benefits-text">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
-          <li>
-            <h3>Планирование</h3>
-            <p>
+          <li class="benefits-item">
+            <h3 class="benefits-title">Планирование</h3>
+            <p class="benefits-text">
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
-          <li>
-            <h3>Современные технологии</h3>
-            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+          <li class="benefits-item">
+            <h3 class="benefits-title">Современные технологии</h3>
+            <p class="benefits-text">
+              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+            </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
-          <li>
+      <section class="about">
+        <h2 class="about-title">Чем мы занимаемся</h2>
+        <ul class="about-list">
+          <li class="about-item">
             <img
               src="./img/box_1.jpg"
               alt="разработка программного обеспечения"
@@ -69,7 +83,7 @@
               height="294"
             />
           </li>
-          <li>
+          <li class="about-item">
             <img
               src="./img/box_2.jpg"
               alt="тестирование мобильного приложения"
@@ -77,49 +91,51 @@
               height="294"
             />
           </li>
-          <li>
+          <li class="about-item">
             <img src="./img/box_3.jpg" alt="работа с палитрой цветов" width="370" height="294" />
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
+      <section class="team">
+        <h2 class="team-title">Наша команда</h2>
+        <ul class="team-list">
+          <li class="team-item">
             <img src="./img/img_team_1.jpg" alt="Product Designer" width="270" height="260" />
-            <h3>Игорь Демьяненко</h3>
-            <p lang="en">Product Designer</p>
+            <h3 class="team-item-title">Игорь Демьяненко</h3>
+            <p class="team-item-text" lang="en">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./img/img_team_2.jpg" alt="Frontend Developer" width="270" height="260" />
-            <h3>Ольга Репина</h3>
-            <p lang="en">Frontend Developer</p>
+            <h3 class="team-item-title">Ольга Репина</h3>
+            <p class="team-item-text" lang="en">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./img/img_team_3.jpg" alt="Marketing" width="270" height="260" />
-            <h3>Николай Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <h3 class="team-item-title">Николай Тарасов</h3>
+            <p class="team-item-text" lang="en">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./img/img_team_4.jpg" alt="UI Designer" width="270" height="260" />
-            <h3>Михаил Ермаков</h3>
-            <p lang="en">UI Designer</p>
+            <h3 class="team-item-title">Михаил Ермаков</h3>
+            <p class="team-item-text" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="/">WebStudio</a>
-      <address>
-        <ul>
-          <li>
-            <a href="https://goo.gl/maps/qoJzxrVLCb3UoENp8">г. Киев, пр-т Леси Украинки, 26</a>
+    <footer class="footer">
+      <a href="/" class="fooetr-logo">WebStudio</a>
+      <address class="footer-address">
+        <ul class="footer-list">
+          <li class="footer-item">
+            <a class="footer-link" href="https://goo.gl/maps/qoJzxrVLCb3UoENp8"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
           </li>
-          <li>
-            <a href="mailto:info@example.com">info@example.com</a>
+          <li class="footer-item">
+            <a class="footer-link" href="mailto:info@example.com">info@example.com</a>
           </li>
-          <li>
-            <a href="tel:+380991111111">+38 099 111 11 11</a>
+          <li class="footer-item">
+            <a class="footer-link" href="tel:+380991111111">+38 099 111 11 11</a>
           </li>
         </ul>
       </address>
